Add location routes, services and contracts
* Add location routes, services and contracts

* Update docs
