# application/config/routes.rb
@@ -5,4 +5,10 @@ Rails.application.routes.draw do
     mount Rswag::Ui::Engine => '/api-docs'
     mount Rswag::Api::Engine => '/api-docs'
   end
+
+  namespace :api do
+    namespace :v1 do
+      resources :locations, param: :ip_or_url, constraints: { ip_or_url: /.*/ }, only: %i[show create destroy]
+    end
+  end
 end
