# application/swagger/v1/swagger.yaml
@@ -3,7 +3,328 @@ openapi: 3.0.1
 info:
   title: Geo Location
   version: v1
-paths: {}
+paths:
+  "/api/v1/locations":
+    post:
+      summary: Create a location
+      tags:
+      - Locations
+      security:
+      - ApiKeyAuth: []
+      parameters: []
+      responses:
+        '201':
+          description: location created
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: object
+                    properties:
+                      id:
+                        type: string
+                      type:
+                        type: string
+                      attributes:
+                        type: object
+                        properties:
+                          ip:
+                            type: string
+                          url:
+                            type: string
+                            nullable: true
+                          kind:
+                            type: string
+                          continent_code:
+                            type: string
+                          continent_name:
+                            type: string
+                          country_code:
+                            type: string
+                          country_name:
+                            type: string
+                          region_code:
+                            type: string
+                          region_name:
+                            type: string
+                          city:
+                            type: string
+                          zip:
+                            type: string
+                          latitude:
+                            type: string
+                          longitude:
+                            type: string
+                          location:
+                            type: object
+                            nullable: true
+                          time_zone:
+                            type: object
+                            nullable: true
+                          currency:
+                            type: object
+                            nullable: true
+                          created_at:
+                            type: string
+                          updated_at:
+                            type: string
+                        required:
+                        - ip
+                        - url
+                        - kind
+                        - continent_code
+                        - continent_name
+                        - country_code
+                        - country_name
+                        - region_code
+                        - region_name
+                        - city
+                        - zip
+                        - latitude
+                        - longitude
+                        - location
+                        - time_zone
+                        - currency
+                        - created_at
+                        - updated_at
+                    required:
+                    - id
+                    - type
+                    - attributes
+                required:
+                - data
+        '401':
+          description: not authorized
+        '422':
+          description: unprocessable entity with an invalid url
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  errors:
+                    type: object
+                    properties:
+                      ip_or_url:
+                        type: array
+                        items:
+                          type: string
+                      ip:
+                        type: array
+                        items:
+                          type: string
+                      url:
+                        type: array
+                        items:
+                          type: string
+                    required:
+                    - url
+                required:
+                - errors
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                ip:
+                  type: string
+                url:
+                  type: string
+              required: []
+  "/api/v1/locations/{ip_or_url}":
+    delete:
+      summary: Destroy a location
+      tags:
+      - Locations
+      security:
+      - ApiKeyAuth: []
+      parameters:
+      - name: ip_or_url
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        '200':
+          description: location destroyed
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: object
+                    properties:
+                      id:
+                        type: string
+                      type:
+                        type: string
+                      attributes:
+                        type: object
+                        properties:
+                          ip:
+                            type: string
+                          url:
+                            type: string
+                          kind:
+                            type: string
+                          continent_code:
+                            type: string
+                          continent_name:
+                            type: string
+                          country_code:
+                            type: string
+                          country_name:
+                            type: string
+                          region_code:
+                            type: string
+                          region_name:
+                            type: string
+                          city:
+                            type: string
+                          zip:
+                            type: string
+                          latitude:
+                            type: string
+                          longitude:
+                            type: string
+                          location:
+                            type: object
+                          time_zone:
+                            type: object
+                          currency:
+                            type: object
+                          created_at:
+                            type: string
+                          updated_at:
+                            type: string
+                        required:
+                        - ip
+                        - url
+                        - kind
+                        - continent_code
+                        - continent_name
+                        - country_code
+                        - country_name
+                        - region_code
+                        - region_name
+                        - city
+                        - zip
+                        - latitude
+                        - longitude
+                        - location
+                        - time_zone
+                        - currency
+                        - created_at
+                        - updated_at
+                    required:
+                    - id
+                    - type
+                    - attributes
+                required:
+                - data
+        '401':
+          description: not authorized
+        '404':
+          description: not found
+    get:
+      summary: Retrieve a location
+      tags:
+      - Locations
+      security:
+      - ApiKeyAuth: []
+      parameters:
+      - name: ip_or_url
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        '200':
+          description: location found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: object
+                    properties:
+                      id:
+                        type: string
+                      type:
+                        type: string
+                      attributes:
+                        type: object
+                        properties:
+                          ip:
+                            type: string
+                          url:
+                            type: string
+                          kind:
+                            type: string
+                          continent_code:
+                            type: string
+                          continent_name:
+                            type: string
+                          country_code:
+                            type: string
+                          country_name:
+                            type: string
+                          region_code:
+                            type: string
+                          region_name:
+                            type: string
+                          city:
+                            type: string
+                          zip:
+                            type: string
+                          latitude:
+                            type: string
+                          longitude:
+                            type: string
+                          location:
+                            type: object
+                          time_zone:
+                            type: object
+                          currency:
+                            type: object
+                          created_at:
+                            type: string
+                          updated_at:
+                            type: string
+                        required:
+                        - ip
+                        - url
+                        - kind
+                        - continent_code
+                        - continent_name
+                        - country_code
+                        - country_name
+                        - region_code
+                        - region_name
+                        - city
+                        - zip
+                        - latitude
+                        - longitude
+                        - location
+                        - time_zone
+                        - currency
+                        - created_at
+                        - updated_at
+                    required:
+                    - id
+                    - type
+                    - attributes
+                required:
+                - data
+        '401':
+          description: not authorized
+        '404':
+          description: not found
 servers:
 - url: http://{defaultHost}
   variables:
@@ -15,3 +336,5 @@ components:
       type: apiKey
       in: header
       name: Authorization
+      default: some-value
+      value: some-value
